# ingest-rs

./: Cargo.toml  rules.md
crates/ingest-api/: Cargo.toml
crates/ingest-api/src/: api_server.rs  auth.rs  config.rs  docs.rs  error.rs  handlers.rs  lib.rs  middleware.rs  rate_limit.rs  realtime.rs  routes.rs  security.rs  types.rs
crates/ingest-api/src/graphql/: mod.rs  resolvers.rs  schema.rs  subscriptions.rs  types.rs
crates/ingest-benchmarks/: Cargo.toml
crates/ingest-benchmarks/benches/: api_performance.rs  event_ingestion.rs  function_execution.rs  storage_operations.rs
crates/ingest-benchmarks/src/: lib.rs
crates/ingest-cli/: Cargo.toml
crates/ingest-cli/src/: lib.rs  main.rs
crates/ingest-cli/src/cli/: completion.rs  config.rs  deploy.rs  dev.rs  events.rs  functions.rs  init.rs  mod.rs
crates/ingest-cli/src/config/: project.rs
crates/ingest-cli/src/deploy/: mod.rs  pipeline.rs  validation.rs
crates/ingest-cli/src/dev/: mod.rs  server.rs  watcher.rs
crates/ingest-cli/src/utils/: output.rs
crates/ingest-config/: Cargo.toml
crates/ingest-config/src/: database.rs  error.rs  features.rs  lib.rs  loader.rs  server.rs
crates/ingest-connect/: Cargo.toml
crates/ingest-connect/src/: auth.rs  config.rs  connection.rs  error.rs  lib.rs  manager.rs  monitoring.rs  protocol.rs  realtime.rs  server.rs  streaming.rs  types.rs
crates/ingest-events/: Cargo.toml
crates/ingest-events/src/: error.rs  lib.rs  processor.rs  serialization.rs  stream.rs  validation.rs
crates/ingest-events/src/routing/: filters.rs  mod.rs  patterns.rs  rules.rs
crates/ingest-execution/: Cargo.toml
crates/ingest-execution/src/: concurrency.rs  context.rs  engine.rs  error.rs  executor.rs  lib.rs  retry.rs  types.rs
crates/ingest-expressions/: Cargo.toml
crates/ingest-expressions/src/: context.rs  error.rs  evaluator.rs  lib.rs  parser.rs  performance.rs  security.rs  types.rs
crates/ingest-expressions/tests/: integration.rs
crates/ingest-history/: Cargo.toml
crates/ingest-history/src/: archive.rs  audit.rs  error.rs  lib.rs  query.rs  retention.rs  storage.rs
crates/ingest-migration/: Cargo.toml
crates/ingest-migration/src/: lib.rs  main.rs
crates/ingest-migrations/: Cargo.toml
crates/ingest-migrations/src/: error.rs  lib.rs  migration.rs  runner.rs  schema.rs
crates/ingest-monitoring/: Cargo.toml
crates/ingest-monitoring/src/: error.rs  health.rs  http.rs  lib.rs  metrics.rs  resource.rs
crates/ingest-pubsub/: Cargo.toml
crates/ingest-pubsub/src/: broker.rs  error.rs  integration.rs  lib.rs  manager.rs  message.rs  subscriber.rs  topic.rs  traits.rs  types.rs
crates/ingest-queue/: Cargo.toml
crates/ingest-queue/src/: config.rs  lib.rs  manager.rs  storage.rs  tenant.rs  traits.rs  types.rs
crates/ingest-sdk/: Cargo.toml
crates/ingest-sdk/src/: client.rs  error.rs  event.rs  function.rs  lib.rs  local.rs  testing.rs
crates/ingest-security/: Cargo.toml
crates/ingest-security/src/: lib.rs
crates/ingest-server/: Cargo.toml
crates/ingest-server/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  server.rs  services.rs  shutdown.rs
crates/ingest-state/: Cargo.toml
crates/ingest-state/src/: cache.rs  error.rs  lib.rs  locking.rs  manager.rs  recovery.rs  snapshots.rs  storage.rs  tests.rs  transitions.rs  types.rs
crates/ingest-storage/: Cargo.toml
crates/ingest-storage/src/: error.rs  lib.rs  postgres.rs  redis.rs  traits.rs
crates/ingest-telemetry/: Cargo.toml
crates/ingest-telemetry/src/: config.rs  error.rs  exporter.rs  lib.rs  metrics.rs  tracing.rs
refactor/cursor/rust/: Cargo.toml  README.md
refactor/cursor/rust/crates/inngest-api/: Cargo.toml
refactor/cursor/rust/crates/inngest-cli/: Cargo.toml
refactor/cursor/rust/crates/inngest-config/: Cargo.toml
refactor/cursor/rust/crates/inngest-core/: Cargo.toml
refactor/cursor/rust/crates/inngest-cqrs/: Cargo.toml
refactor/cursor/rust/crates/inngest-devserver/: Cargo.toml
refactor/cursor/rust/crates/inngest-devtools/: Cargo.toml
refactor/cursor/rust/crates/inngest-drivers/: Cargo.toml
refactor/cursor/rust/crates/inngest-events/: Cargo.toml
refactor/cursor/rust/crates/inngest-execution/: Cargo.toml
refactor/cursor/rust/crates/inngest-pubsub/: Cargo.toml
refactor/cursor/rust/crates/inngest-queue/: Cargo.toml
refactor/cursor/rust/crates/inngest-state/: Cargo.toml
refactor/cursor/rust/crates/inngest-tracing/: Cargo.toml
refactor/cursor/rust/crates/inngest-utils/: Cargo.toml
refactor/rust-rewrite/: .env  Cargo.toml  Dockerfile  MIGRATION.md  Makefile  PHASE2_COMPLETION.md  PHASE2_PROGRESS.md  PHASE3_REPORT.md  PHASE3_TEST_REPORT.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE5_PLAN.md  PHASE6_COMPLETE.md  PHASE6_PLAN.md  PHASE_5_COMPLETE.md  PROJECT_STATUS.md  README.md  UI_INTEGRATION_ANALYSIS.md  comprehensive_phase3_test.sh  comprehensive_test.sh  docker-compose.yml  phase4_api_test.sh  phase5_verify.sh  test_complete.sh  test_devserver.sh  test_error_handling.sh  test_phase3.sh  test_production.sh
refactor/rust-rewrite/.github/workflows/: ci.yml
refactor/rust-rewrite/crates/inngest-api/: Cargo.toml
refactor/rust-rewrite/crates/inngest-api/src/: graphql.rs  lib.rs  rest.rs
refactor/rust-rewrite/crates/inngest-cli/: Cargo.toml
refactor/rust-rewrite/crates/inngest-cli/src/: api.rs  lib.rs  production_server.rs  production_state.rs
refactor/rust-rewrite/crates/inngest-config/: Cargo.toml
refactor/rust-rewrite/crates/inngest-config/src/: lib.rs
refactor/rust-rewrite/crates/inngest-core/: Cargo.toml
refactor/rust-rewrite/crates/inngest-core/src/: error.rs  event.rs  function.rs  lib.rs  queue.rs  routing.rs  run.rs  state.rs  types.rs
refactor/rust-rewrite/crates/inngest-devserver/: Cargo.toml
refactor/rust-rewrite/crates/inngest-devserver/src/: discovery.rs  lib.rs
refactor/rust-rewrite/crates/inngest-executor/: Cargo.toml
refactor/rust-rewrite/crates/inngest-queue/: Cargo.toml
refactor/rust-rewrite/crates/inngest-state/: Cargo.toml
refactor/rust-rewrite/scripts/: performance_test.sh
refactor/rust-rewrite/src/: main.rs
(+64 files in other folders)
