[workspace]
resolver = "3"
members = ["crates/ingest-core"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["v4"] }
ulid = "1.2"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
