[package]
name = "ingest-benchmarks"
version = "0.1.0"
edition = "2021"
description = "Performance benchmarking suite for Inngest Rust platform"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"

# Testing utilities
pretty_assertions = "1.4"
tempfile = "3.8"

# Inngest crates
ingest-core = { path = "../ingest-core" }
ingest-events = { path = "../ingest-events" }
ingest-execution = { path = "../ingest-execution" }
ingest-storage = { path = "../ingest-storage" }
ingest-queue = { path = "../ingest-queue" }
ingest-api = { path = "../ingest-api" }
ingest-server = { path = "../ingest-server" }

# Monitoring and profiling
tracing = "0.1"
tracing-subscriber = "0.3"

[[bench]]
name = "event_ingestion"
harness = false

[[bench]]
name = "function_execution"
harness = false

[[bench]]
name = "api_performance"
harness = false

[[bench]]
name = "storage_operations"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }