[package]
name = "ingest-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Placeholder crate for the Inngest durable functions platform"

[dependencies]
ingest-core = { path = "../ingest-core" }
ingest-config = { path = "../ingest-config" }
ingest-api = { path = "../ingest-api" }
ingest-server = { path = "../ingest-server" }
ingest-storage = { path = "../ingest-storage" }

# CLI Framework
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Async Runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# File System
notify = "6.1"
walkdir = "2.5"
tempfile = "3.20"

# Terminal UI
console = "0.15"
indicatif = "0.17"
colored = "2.1"
dialoguer = "0.11"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Development
cargo_metadata = "0.18"

[dev-dependencies]
pretty_assertions = { workspace = true }

[[bin]]
name = "ingest"
path = "src/main.rs"
