[package]
name = "ingest-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Configuration management for the Inngest durable functions platform"

[dependencies]
# Core
ingest-core = { path = "../ingest-core" }

# Configuration
config = { workspace = true }
toml = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
url = { workspace = true }

# Development
derive_setters = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = "3.0"
