[package]
name = "ingest-connect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Placeholder crate for the Inngest durable functions platform"

[dependencies]
ingest-core = { path = "../ingest-core" }
ingest-config = { path = "../ingest-config" }
ingest-telemetry = { path = "../ingest-telemetry" }
tokio = { workspace = true, features = ["net", "sync", "time", "rt-multi-thread"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = "6.1"
tower = { workspace = true }
tower-http = { workspace = true }
axum = { workspace = true, features = ["ws"] }
headers = { workspace = true }
jsonwebtoken = { workspace = true }
url = { workspace = true }
derive_setters = { workspace = true }
rand = "0.8"

[dev-dependencies]
pretty_assertions = { workspace = true }
