[package]
name = "ingest-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Placeholder crate for the Inngest durable functions platform"

[dependencies]
ingest-core = { path = "../ingest-core" }
ingest-state = { path = "../ingest-state" }
ingest-queue = { path = "../ingest-queue" }
ingest-events = { path = "../ingest-events" }
ingest-expressions = { path = "../ingest-expressions" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
derive_setters = "0.1"

[dev-dependencies]
pretty_assertions = { workspace = true }
