[package]
name = "ingest-migration"
version = "0.1.0"
edition = "2021"
description = "Migration tools for transitioning from Go to Rust Inngest platform"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# File operations
walkdir = "2.0"
tempfile = "3.8"

# Configuration parsing
toml = "0.8"
config = "0.14"

# Database migration
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate"] }

# CLI tools
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.0"

# Testing
pretty_assertions = "1.4"

# Inngest crates
ingest-core = { path = "../ingest-core" }
ingest-config = { path = "../ingest-config" }
ingest-storage = { path = "../ingest-storage" }

[[bin]]
name = "ingest-migrate"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"