[package]
name = "ingest-monitoring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Placeholder crate for the Inngest durable functions platform"

[dependencies]
ingest-core = { path = "../ingest-core" }
ingest-config = { path = "../ingest-config" }
ingest-storage = { path = "../ingest-storage" }
ingest-telemetry = { path = "../ingest-telemetry" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP server for health endpoints
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
derive_setters = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
