[package]
name = "ingest-pubsub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Publish-subscribe messaging system for the Inngest durable functions platform"

[dependencies]
ingest-core = { path = "../ingest-core" }
ingest-storage = { path = "../ingest-storage" }
ingest-execution = { path = "../ingest-execution" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
derive_setters = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
