[package]
name = "ingest-security"
version = "0.1.0"
edition = "2021"
description = "Security audit and hardening tools for Inngest Rust platform"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
ring = "0.17"
argon2 = "0.5"
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4"] }

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Input validation
validator = { workspace = true }
regex = "1.0"

# Cryptography
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"

# Audit tools
cargo_metadata = "0.18"

# Testing
pretty_assertions = "1.4"
tempfile = "3.8"

# Inngest crates
ingest-core = { path = "../ingest-core" }
ingest-config = { path = "../ingest-config" }

[dev-dependencies]
tokio-test = "0.4"
