[package]
name = "ingest-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Placeholder crate for the Inngest durable functions platform"

[dependencies]
ingest-core = { path = "../ingest-core" }
tokio = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
