[package]
name = "ingest-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Telemetry and observability for the Inngest durable functions platform"

[dependencies]
ingest-core = { path = "../ingest-core" }
ingest-config = { path = "../ingest-config" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-jaeger = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }

# Tracing integration
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
prometheus = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
url = { workspace = true }
derive_setters = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
