[package]
name = "inngest"
version = "0.1.0"
edition = "2021"
authors = ["Inngest Team <team@inngest.com>"]
description = "Inngest durable execution engine - Rust implementation"
license = "SSPL-1.0"
repository = "https://github.com/inngest/inngest"

[workspace]
members = [
  "crates/inngest-core",
  "crates/inngest-executor",
  "crates/inngest-queue",
  "crates/inngest-api",
  "crates/inngest-state",
  "crates/inngest-config",
  "crates/inngest-cli",
  "crates/inngest-devserver",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
redis = { version = "0.24", features = [
  "tokio-comp",
  "connection-manager",
  "json",
] }

# Connection pooling
deadpool-postgres = "0.12"
deadpool-redis = "0.14"

# HTTP and web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# UUID and time
uuid = { version = "1.6", features = ["v4", "serde"] }
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"

# Message queues and pubsub
lapin = "2.3"    # RabbitMQ
rdkafka = "0.36" # Kafka

# Concurrency and channels
tokio-util = "0.7"
dashmap = "5.5"
parking_lot = "0.12"

# Crypto and hashing
sha2 = "0.10"
jsonwebtoken = "9.2"

# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"

# Expressions and CEL
cel-interpreter = "0.4"

# Workflow and state machines
petgraph = "0.6"

# Rate limiting
governor = "0.6"

[dependencies]
inngest-core = { path = "crates/inngest-core" }
inngest-cli = { path = "crates/inngest-cli" }
inngest-devserver = { path = "crates/inngest-devserver" }

tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "inngest"
path = "src/main.rs"
