[workspace]
members = [
    "crates/inngest-cli",
    "crates/inngest-core",
    "crates/inngest-config", 
    "crates/inngest-events",
    "crates/inngest-execution",
    "crates/inngest-state",
    "crates/inngest-queue",
    "crates/inngest-devtools",
    "crates/inngest-pubsub",
    "crates/inngest-drivers",
    "crates/inngest-api",
    "crates/inngest-cqrs",
    "crates/inngest-devserver",
    "crates/inngest-tracing",
    "crates/inngest-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Inngest Team"]
license = "Apache-2.0"
repository = "https://github.com/inngest/inngest"
description = "Reliable workflows, durable execution"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1.77"
futures = "0.3.30"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
prost-types = "0.12"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = { version = "0.7", features = ["json", "headers"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression"] }
hyper = { version = "1.0", features = ["full"] }

# Database and Storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# CLI and Configuration
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14"
toml = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-prometheus = "0.6"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
testcontainers = "0.15"
mockall = "0.12"
pretty_assertions = "1.4"
insta = "1.34"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev.package.sqlx-macros]
opt-level = 3 