[package]
name = "inngest-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management for Inngest"

[dependencies]
inngest-core = { path = "../inngest-core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.14"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
insta = "1.34" 